// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate HTML when given a DOM node: first frame 1`] = `
<div
  class=" pixel-animator"
  id="root"
  style="width: 320px; height: 320px;"
>
  <div
    class="pa-cell pa-cell-0"
    style="width: 50%; height: 50%; display: inline-block; vertical-align: top; background-color: rgb(0, 0, 0);"
  />
  <div
    class="pa-cell pa-cell-1"
    style="width: 50%; height: 50%; display: inline-block; vertical-align: top; background-color: rgb(127, 0, 0);"
  />
  <div
    class="pa-cell pa-cell-2"
    style="width: 50%; height: 50%; display: inline-block; vertical-align: top; background-color: rgb(0, 127, 0);"
  />
  <div
    class="pa-cell pa-cell-3"
    style="width: 50%; height: 50%; display: inline-block; vertical-align: top; background-color: rgb(127, 127, 0);"
  />
</div>
`;

exports[`should generate HTML when given a DOM node: second frame 1`] = `
<div
  class=" pixel-animator"
  id="root"
  style="width: 320px; height: 320px;"
>
  <div
    class="pa-cell pa-cell-0"
    style="width: 50%; height: 50%; display: inline-block; vertical-align: top; background-color: rgb(0, 0, 127);"
  />
  <div
    class="pa-cell pa-cell-1"
    style="width: 50%; height: 50%; display: inline-block; vertical-align: top; background-color: rgb(127, 0, 127);"
  />
  <div
    class="pa-cell pa-cell-2"
    style="width: 50%; height: 50%; display: inline-block; vertical-align: top; background-color: rgb(0, 127, 127);"
  />
  <div
    class="pa-cell pa-cell-3"
    style="width: 50%; height: 50%; display: inline-block; vertical-align: top; background-color: rgb(127, 127, 127);"
  />
</div>
`;

exports[`should iterate over frames 1`] = `
Array [
  Array [
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 0,
      "red": 0,
    },
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 0,
      "red": 127,
    },
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 127,
      "red": 0,
    },
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 127,
      "red": 127,
    },
  ],
  Array [
    Object {
      "alpha": 1,
      "blue": 127,
      "green": 0,
      "red": 0,
    },
    Object {
      "alpha": 1,
      "blue": 127,
      "green": 0,
      "red": 127,
    },
    Object {
      "alpha": 1,
      "blue": 127,
      "green": 127,
      "red": 0,
    },
    Object {
      "alpha": 1,
      "blue": 127,
      "green": 127,
      "red": 127,
    },
  ],
]
`;

exports[`should maintain state between frames 1`] = `
Array [
  Array [
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 0,
      "red": 0,
    },
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 0,
      "red": 0,
    },
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 0,
      "red": 0,
    },
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 0,
      "red": 0,
    },
  ],
  Array [
    Object {
      "alpha": 1,
      "blue": 255,
      "green": 255,
      "red": 255,
    },
    Object {
      "alpha": 1,
      "blue": 255,
      "green": 255,
      "red": 255,
    },
    Object {
      "alpha": 1,
      "blue": 255,
      "green": 255,
      "red": 255,
    },
    Object {
      "alpha": 1,
      "blue": 255,
      "green": 255,
      "red": 255,
    },
  ],
]
`;

exports[`should wrap when referencing out of bounds cell 1`] = `
Array [
  Array [
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 0,
      "red": 0,
    },
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 0,
      "red": 127,
    },
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 127,
      "red": 0,
    },
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 127,
      "red": 127,
    },
  ],
  Array [
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 127,
      "red": 127,
    },
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 127,
      "red": 0,
    },
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 0,
      "red": 127,
    },
    Object {
      "alpha": 1,
      "blue": 0,
      "green": 0,
      "red": 0,
    },
  ],
]
`;
